исправление замечаний